fix progress bar text alignment

--- a/src/components/home/statistics.module.scss
+++ b/src/components/home/statistics.module.scss
@@ -7,6 +7,11 @@
 }
 
 .main-row {
+  :global {
+    .CircularProgressbar-text {
+      text-anchor: middle;
+    }
+  }
   display: flex;
   gap: 20px;
 
